--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Christine Shrader # your name (or website title) here
 logo: "/images/avatar.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-   <br><br>
-  Entrepreneurial Spirit
+  <br><br>
+  <b>Entrepreneurial Spirit</b>
   <br><br>
   Logical Thinker
   <br><br>
