--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   <b>Entrepreneurial Spirit</b>
   <br><br>
-  Logical Thinker
+  <b>Logical Thinker</b>
   <br><br>
-  Relentless Problem Solver 
+  <b>Relentless Problem Solver</b>
   <br><br>
   <a href="https://www.linkedin.com/in/christine-shrader-32044264/">View My LinkedIn Profile</a> 
   
