--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   
   <a href="https://www.linkedin.com/in/christine-shrader-32044264/">View My LinkedIn Profile</a> 
   <br>
-  <i class="fa fa-check-circle" style="font-size:48px;color:green"></i>
-  Right to work in the UK, no sponsorship needed
+  <i style="font-size:24px" class="fa">&#xf058;</i>
+  Right to work in the UK without sponsorship
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
