--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   
   <a href="https://www.linkedin.com/in/christine-shrader-32044264/">View My LinkedIn Profile</a> 
   <br>
-  <i style="font-size:24px" class="fa">&#xf058;</i>
+icon: fa-check
   Right to work in the UK without sponsorship
   
 theme: jekyll-theme-minimal
