--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   
   <a href="https://www.linkedin.com/in/christine-shrader-32044264/">View My LinkedIn Profile</a> 
   <br>
-icon: fa-check
+  <img src="images/check.png?raw=true"/>
   Right to work in the UK without sponsorship
   
 theme: jekyll-theme-minimal
-google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+
