--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   
   <a href="https://www.linkedin.com/in/christine-shrader-32044264/">View My LinkedIn Profile</a> 
   <br>
-  <img src="images/check.png?raw=true" style="width:50px;height:60px;/>
+  <img src="images/check.png?raw=true" style="width:50px;height:60px;"/>
   Right to work in the UK without sponsorship
   
 theme: jekyll-theme-minimal
